--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 				Most of my projects are available on <a onclick="Show('socials')"><strong>GitHub</strong></a> if you
 				want to
-				check<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+				check<br><br>
 
 				<!-- hobbies -->
 				I enjoy playing video games, my favorite genre being 2D platformers, no matter the difficulty.<br>
@@ -459,7 +459,7 @@
 			</div>
 		</div>
 
-		<div class="window-content daisysquest">
+		<div class="window-content daisysquest" style="max-width: 800px; ">
 
 			Made during my 1st year at Creajeux
 			<div class="flex-array" style="gap:1.5em;">
@@ -471,7 +471,13 @@
 			<div>
 				Daisy's Quest is a <strong>RPG</strong> game made in <strong>Lua</strong> using <strong>LOVE2D</strong>.<br>
 				On this project, I worked on the map, loading/unloading, imports from Tiled, animated tiles, and level design.
-				I also made some gameplay with the creation of the last boss and the AI of the goblin.
+				I also made some gameplay with the creation of the last boss and the AI of the goblin.<br><br>
+			</div>
+
+			<div class="image-grid">
+				<img class="image-grid-item" src="images/DQ1.png" alt="Screenshot 1" >
+				<img class="image-grid-item" src="images/DQ2.png" alt="Screenshot 2" >
+				<img class="image-grid-item big" src="images/DQ3.png" alt="Screenshot 3" >
 			</div>
 		</div>
 	</div>
