--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 				I started programming in 2020 at Creajeux and never stopped since. During my study, I made several cool
 				projects, alone or with a team, last one being <a onclick="Show('geckoparty')"><strong>Gecko
 						Party</strong></a>.<br><br>
-
-				Most of my projects are available on <a onclick="Show('socials')"><strong>GitHub</strong></a> if you
+						
+				Most of my projects are available on <a href="https://github.com/SumishiM" target="_blank"><strong>GitHub</strong></a> if you
 				want to
 				check<br><br>
 
