--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<div class="window-content about">
 			<p>Time at my place : <span id="datetime"></span><br><br>
 				<!-- programming -->
-				Hi! I'm Hugo Michel (AKA Sumishi), I'm 21<br>
+				Hi! I'm Hugo Michel - AKA Sumishi, I'm 21.<br>
 				I'm a french video game programmer, mainly interested in game engine programming, tools and procedural
 				generation but I also love to experimenting all kinds of stuffs for fun or just out of
 				curiosity.<br><br>
