Update gecko party & stellaria content + screenshots

--- a/index.html
+++ b/index.html
@@ -382,13 +382,29 @@
 					<strong>2 months</strong></span>
 			</div>
 
-			Gecko Party is a local multiplayer party game made with Unity featuring 8 minigames and a large lobby to
-			explore !<br>
-
-			On this project, I worked on the project architecture and core systems, 2 out of the 8 minigames and a major
-			part of the GUI.<br>
-
+			<div>
+				Gecko Party is a local multiplayer party game made with Unity featuring 8 minigames and a large lobby to
+				explore !<br>
+	
+				On this project, I worked on the project architecture and core systems, 2 out of the 8 minigames and a major
+				part of the GUI.<br>
+			</div>
+			
+			<br>
 			<iframe src="https://www.youtube.com/embed/X39tJUiFqlo" frameborder="0" allowfullscreen></iframe>
+			<br>
+			<strong>Some screenshots !</strong>
+			<div class="image-grid">
+				<img class="screenshot image-grid-item" src="images/GP3.png" alt="Screenshot 1" >
+				<img class="screenshot image-grid-item big" src="images/GP1.png" alt="Screenshot 3" >
+				<img class="screenshot image-grid-item" src="images/GP2.png" alt="Screenshot 2" >
+			</div>
+			<img class="screenshot" src="images/GP5.png" alt="Screenshot 7" >
+			<div class="image-grid">
+				<img class="screenshot image-grid-item big" src="images/GP7.png" alt="Screenshot 4" >
+				<img class="screenshot image-grid-item" src="images/GP4.png" alt="Screenshot 5" >
+				<img class="screenshot image-grid-item" src="images/GP6.png" alt="Screenshot 6" >
+			</div>
 		</div>
 	</div>
 
@@ -401,7 +417,7 @@
 			</div>
 		</div>
 
-		<div class="window-content stellaria">
+		<div class="window-content stellaria" style="max-width: 800px; ">
 			Made during my 2nd year at Creajeux
 			<div class="flex-array" style="gap:1.5em;">
 				<span><img class="small-icon" src="images/members.png" alt="Members" width="20" height="20" />
@@ -418,8 +434,14 @@
 			</div>
 
 			<br>
-
 			<iframe src="https://www.youtube.com/embed/ji3UeEr6V-A" frameborder="0" allowfullscreen></iframe>
+			<br>
+			<strong>Some screenshots !</strong>
+			<div class="image-grid">
+				<img class="screenshot image-grid-item" src="images/Stellaria3.png" alt="Screenshot 1" >
+				<img class="screenshot image-grid-item big" src="images/Stellaria1.png" alt="Screenshot 3" >
+				<img class="screenshot image-grid-item" src="images/Stellaria2.png" alt="Screenshot 2" >
+			</div>
 		</div>
 	</div>
 
@@ -475,9 +497,9 @@
 			</div>
 
 			<div class="image-grid">
+				<img class="image-grid-item big" src="images/DQ3.png" alt="Screenshot 3" >
 				<img class="image-grid-item" src="images/DQ1.png" alt="Screenshot 1" >
 				<img class="image-grid-item" src="images/DQ2.png" alt="Screenshot 2" >
-				<img class="image-grid-item big" src="images/DQ3.png" alt="Screenshot 3" >
 			</div>
 		</div>
 	</div>
