Update DTK content + screenshots

--- a/index.html
+++ b/index.html
@@ -463,12 +463,16 @@
 				<span><img class="small-icon" src="images/duration.png" alt="Duration" width="20" height="20" />
 					<strong>1 months</strong></span>
 			</div>
+			
 			<div>
 				Hydre'O'Miel is a <strong>card game</strong> made in <strong>C++</strong> using the
 				<strong>SFML</strong> graphic library<br>
 				On this project, I worked on the game architecture and game design, I also worked on some animations and
 				feedbacks.
 			</div>
+
+			<br>
+			<strong>Some screenshots !</strong>
 		</div>
 	</div>
 
@@ -496,6 +500,8 @@
 				I also made some gameplay with the creation of the last boss and the AI of the goblin.<br><br>
 			</div>
 
+			<br>
+			<strong>Some screenshots !</strong>
 			<div class="image-grid">
 				<img class="image-grid-item big" src="images/DQ3.png" alt="Screenshot 3" >
 				<img class="image-grid-item" src="images/DQ1.png" alt="Screenshot 1" >
@@ -525,6 +531,14 @@
 			<div>
 				Defend the Kingdom is a <strong>Tower defense</strong> game made in <strong>Lua</strong> using <strong>LOVE2D</strong>.<br>
 				On this project, I worked on the map system, with tower placement and upgrades, imports from Tiled and level design.
+			</div>
+			
+			<br>
+			<strong>Some screenshots !</strong>
+			<div class="image-grid">
+				<img class="image-grid-item" src="images/DTK1.png" alt="Screenshot 1" >
+				<img class="image-grid-item" src="images/DTK2.png" alt="Screenshot 2" >
+				<img class="image-grid-item big" src="images/DTK3.png" alt="Screenshot 3" >
 			</div>
 		</div>
 	</div>
