Content for Hydre'O'Miel

--- a/index.html
+++ b/index.html
@@ -473,6 +473,11 @@
 
 			<br>
 			<strong>Some screenshots !</strong>
+			<div class="image-grid">
+				<img class="image-grid-item" src="images/HOM1.png" alt="Screenshot 1" >
+				<img class="image-grid-item" src="images/HOM2.png" alt="Screenshot 2" >
+				<img class="image-grid-item big" src="images/HOM3.png" alt="Screenshot 3" >
+			</div>
 		</div>
 	</div>
 
