Organize css in multiple files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" type="text/css" href="Styles/style.css">
+	<link rel="stylesheet" type="text/css" href="Styles/windows.css">
+	<link rel="stylesheet" type="text/css" href="Styles/accordions.css">
+	<link rel="stylesheet" type="text/css" href="Styles/buttons.css">
+	<link rel="stylesheet" type="text/css" href="Styles/image_grid.css">
 </head>
 
 
