--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" type="text/css" href="Styles/fonts.css">
+	<link rel="stylesheet" type="text.class" href="Styles/fonts.css">
 
-	<link rel="stylesheet" type="text/css" href="Styles/style.css">
-	<link rel="stylesheet" type="text/css" href="Styles/windows.css">
-	<link rel="stylesheet" type="text/css" href="Styles/accordions.css">
-	<link rel="stylesheet" type="text/css" href="Styles/buttons.css">
-	<link rel="stylesheet" type="text/css" href="Styles/image_grid.css">
+	<link rel="stylesheet" type="text.class" href="Styles/style.css">
+	<link rel="stylesheet" type="text.class" href="Styles/windows.css">
+	<link rel="stylesheet" type="text.class" href="Styles/accordions.css">
+	<link rel="stylesheet" type="text.class" href="Styles/buttons.css">
+	<link rel="stylesheet" type="text.class" href="Styles/image_grid.css">
 </head>
 
 
